default/objects/GFNI_Batch_Settings__c/GFNI_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GFNI Batch Settings</label>
</CustomObject>