default/objects/GFNI_Batch_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>