default/objects/GFNI_Batch_Settings__c/fields/Error_Message_Reciever__c.field-meta.xml
<CustomField>
    <fullName>Error_Message_Reciever__c</fullName>
    <label>Error Message Reciever</label>
    <type>Email</type>
</CustomField>