default/objects/GFNI_Batch_Settings__c/fields/Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>Query_Limit__c</fullName>
    <label>Query Limit</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>