default/objects/GFNI_Batch_Settings__c/fields/Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>Where_Condition__c</fullName>
    <label>Where Condition</label>
    <type>TextArea</type>
</CustomField>